[tool.poetry]
name = "lazychains"
version = "0.2.10"
description = "Singly linked lists with incremental instantiation of iterators"
authors = ["Stephen Leach <sfkleach@gmail.com>"]
license = "GPL-3.0-or-later"
readme="README.md"
homepage="https://lazychains.readthedocs.io/en/latest/"
documentation="https://lazychains.readthedocs.io/en/latest/"
repository = "https://github.com/sfkleach/lazychains"
keywords = ["iterators", "linked list", "single", "lazy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
Sphinx = "^7.0.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
