[project]
name = "lazychains"
version = "0.2.13"
description = "Singly linked lists with incremental instantiation of iterators"
authors = [{name = "Stephen Leach", email = "sfkleach@gmail.com"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["iterators", "linked list", "single", "lazy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://lazychains.readthedocs.io/en/latest/"
Documentation = "https://lazychains.readthedocs.io/en/latest/"
Repository = "https://github.com/sfkleach/lazychains"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=2.1.0",
    "Sphinx>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazychains"]
